--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
