--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "moment": "^2.30.1"
+    "lokijs": "^1.5.12",
+    "moment": "^2.30.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
