--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "lokijs": "^1.5.12",
+    "method-override": "^3.0.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
