--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "lokijs": "^1.5.12",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
